--- a/GD.Practical/Views/Shared/_Layout.cshtml
+++ b/GD.Practical/Views/Shared/_Layout.cshtml
@@ -22,11 +22,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
                     </ul>
                 </div>
+                <span class="navbar-brand">👨‍💻 Kushagra Gangwal</span>
             </div>
         </nav>
     </header>
